fixed link to anzumana.com

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 <p> Were do you want to go? </p>
 <a href="http://theprojectcast.com">TheProjectCast.com</a>
 <br>
-<a href="http://anzumana.com">Anzumana.com</a>
+<a href="http://www.anzumana.com">Anzumana.com</a>
