first test with semantic ui

--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/dist/semantic.min.css">
+	<script src="bower_components/semantic-ui/dist/semantic.min.js"></script>
+</head>
 <h1> Contet Hub </h1>
+<div class="ui segment">
 <p> Were do you want to go? </p>
+</div>
 <a href="http://theprojectcast.com">TheProjectCast.com</a>
 <br>
 <a href="http://www.anzumana.com">Anzumana.com</a>
