--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<html>
 <head>
 	<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/dist/semantic.min.css">
 	<script src="bower_components/semantic-ui/dist/semantic.min.js"></script>
 </head>
+<body>
 <h1> Contet Hub </h1>
 <div class="ui segment">
 <p> Were do you want to go? </p>
@@ -39,3 +41,5 @@
     </div>
   </div>
 </div>
+<body>
+	</html>
