--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/dist/semantic.min.css">
 	<script src="bower_components/semantic-ui/dist/semantic.min.js"></script>
 </head>
