--- a/index.html
+++ b/index.html
@@ -14,33 +14,54 @@
 <a href="http://theprojectcast.com">TheProjectCast.com</a>
 <br>
 <a href="http://www.anzumana.com">Anzumana.com</a>
-<div class="ui two column middle aligned very relaxed stackable grid">
-  <div class="column">
-    <div class="ui form">
-      <div class="field">
-        <label>Username</label>
-        <div class="ui left icon input">
-          <input type="text" placeholder="Username">
-          <i class="user icon"></i>
+<div class="ui people shape">
+  <div class="sides">
+    <div class="side">
+      <div class="ui card">
+        <div class="image">
+          <img src="/images/avatar/large/steve.jpg">
+        </div>
+        <div class="content">
+          <div class="header">Steve Jobes</div>
+          <div class="meta">
+            <a>Acquaintances</a>
+          </div>
+          <div class="description">
+            Steve Jobes is a fictional character designed to resemble someone familiar to readers.
+          </div>
+        </div>
+        <div class="extra content">
+          <span class="right floated">
+            Joined in 2014
+          </span>
+          <span>
+            <i class="user icon"></i>
+            151 Friends
+          </span>
         </div>
       </div>
-      <div class="field">
-        <label>Password</label>
-        <div class="ui left icon input">
-          <input type="password">
-          <i class="lock icon"></i>
-        </div>
-      </div>
-      <div class="ui blue submit button">Login</div>
     </div>
-  </div>
-  <div class="ui vertical divider">
-    Or
-  </div>
-  <div class="center aligned column">
-    <div class="ui big green labeled icon button">
-      <i class="signup icon"></i>
-      Sign Up
+    <div class="side active">
+      <div class="ui card">
+        <div class="image">
+          <img src="/images/avatar/large/stevie.jpg">
+        </div>
+        <div class="content">
+          <a class="header">Stevie Feliciano</a>
+          <div class="meta">
+            <span class="date">Joined in 2014</span>
+          </div>
+          <div class="description">
+            Stevie Feliciano is a library scientist living in New York City. She likes to spend her time reading, running, and writing.
+          </div>
+        </div>
+        <div class="extra content">
+          <a>
+            <i class="user icon"></i>
+            22 Friends
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
