--- a/index.html
+++ b/index.html
@@ -65,5 +65,10 @@
     </div>
   </div>
 </div>
+<div class="ui large buttons">
+	  <button class="ui button">One</button>
+		  <div class="or"></div>
+			  <button class="ui button">Two</button>
+</div>
 <body>
 	</html>
