--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/dist/semantic.min.css">
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/semantic-ui/dist/semantic.min.js"></script>
+	<script src="animations.js"></script>
 </head>
 <body>
 <h1> Contet Hub </h1>
