--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 </div>
 <div class="ui large buttons">
-	  <button class="ui button">One</button>
+	  <button id="test" class="ui button">One</button>
 		  <div class="or"></div>
 			  <button class="ui button">Two</button>
 </div>
