--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ download_url:'https://github.com/Anzumana/CouldYouSpellThat/blob/master/CouldYou
 												<div class="description">
 													{{friend.about}}
 													<a href='{{friend.download_url}}'>Download the Service</a> or
-													<a href='{{friend.link}}'>Source Code for the Servie in on my Github</a>
+													<a href='{{friend.link}}'>Source Code for the Service in on my Github</a>
 												</div>
 											</div>
 											<div class="extra content">
